<resources>
    <string name="app_name">Cheock</string>
    <string name="upButtonName">10:00</string>//üst sayaç bilgisi
    <string name="downButtonName">10:00</string>//alt sayaç bilgisi
    <string name="doftdareButtonName">doftdare</string>
    <string name="settingsButtonName">SETTINGS</string>
    <string name="startButtonName">START</string>
    <string name="pauseName">PAUSE</string>
    <string name="resumeName">RESUME</string>
    <string name="resetName">RESET</string>
    <string name="finishName">checkmate</string>
    <string name="enterMinuteName">Enter Minute</string>
    <string name="updateMinute">UPTADE</string>
    <string name="versionNumber">version: 3.0</string>
</resources>